@@ -4,17 +4,6 @@ JooseX.Namespace.Depended.Resource.JavaScript.meta.extend({
 })
 
 
-JooseX.Namespace.Depended.Resource.JooseClass.meta.extend({
-    
-    methods : {
-        
-        getUrls : function () {
-            return [ this.token.split('.').join('/') ]
-        }
-    }
-})
-
-
 
 JooseX.Namespace.Depended.Manager.my.disableCaching = false
 
