@@ -6,19 +6,13 @@ Role('JooseX.Namespace.Depended.Materialize.NodeJS', {
         
         materialize : function (resourceBlob, url) {
             
-            // global scope
-            if (process.global == global)
-            
-                process.binding('evals').runInThisContext(resourceBlob + '', url)
-            
-//                process.compile(
-//                    '(function (exports, require, module, __filename, __dirname) {' + resourceBlob + '})', 
-//                    url
-//                )(exports, require, module, __filename, __dirname)
-                
-            else
+            if (global.__PROVIDER__)
                 // running in Test.Run
                 execScript(resourceBlob + '')
+            
+            else
+                // global scope
+                process.binding('evals').Script.runInThisContext(resourceBlob + '', url)
         }
     }
 })
